# osi

./: AUTHORS  Cargo.toml  Makefile  NEWS.md  README.md
.github/workflows/: github-pages.yml  rust-tests.yml
lib/cargo-osiris/: Cargo.toml
lib/cargo-osiris/src/: cargo.rs  con.rs  config.rs  exe.rs  lib.rs  main.rs  md.rs  misc.rs  op.rs  platform.rs  this.rs  toml.rs  util.rs
lib/cargo-osiris/src/op/: emerge.rs
lib/cargo-osiris/src/platform/: android.rs  macos.rs
lib/cargo-osiris/src/platform/android/: apk.rs  dex.rs  flatres.rs  java.rs  keystore.rs  kotlin.rs  sdk.rs
lib/cargo-osiris/src/platform/macos/: actool.rs  codesign.rs  lipo.rs  plistbuddy.rs  productbuild.rs
lib/osi-apis/: Cargo.toml
lib/osi-apis/src/: application.rs  lib.rs
lib/osi-demo/: Cargo.toml
lib/osi-demo/src/: lib.rs  main.rs  platform.rs
lib/osi-demo/src/platform/: windows.rs
lib/osi-derive/: Cargo.toml
lib/osi-derive-proc/: Cargo.toml
lib/osi-derive-proc/src/: derive.rs  lib.rs
lib/osi-derive/src/: lib.rs
lib/osi-json/: Cargo.toml
lib/osi-json/src/: lib.rs  token.rs
lib/osi-lib/: Cargo.toml
lib/osi-lib/src/: align.rs  args.rs  compat.rs  error.rs  hash.rs  hmac.rs  lib.rs  str.rs
lib/osi-lib/src/ffi/: abi.rs  util.rs
lib/osi-util/: Cargo.toml
lib/osi-util/src/: hash.rs  hmac.rs  lib.rs  str.rs
lib/osi-util/src/hash/: sha256.rs
lib/osi-wip/: Cargo.toml
lib/osi-wip/src/: lib.rs
lib/osi-wip/src/ffi/: abi.rs  util.rs
lib/osiris-analyzer/: Cargo.toml
lib/osiris-analyzer/res/: appicon.icns
lib/osiris-analyzer/src/: lib.rs  main.rs  platform.rs
lib/osiris-analyzer/src/platform/: linux_fdo.rs  macos.rs  windows.rs
lib/osiris-linux/: Cargo.toml
lib/osiris-linux/src/: application.rs  lib.rs  notification.rs
lib/osiris-macos/: Cargo.toml
lib/osiris-macos/src/: application.rs  lib.rs
lib/osiris-windows/: Cargo.toml
lib/osiris-windows/src/: application.rs  lib.rs  notification.rs
src/: ffi.rs  lib.rs  mem.rs
src/ffi/: abi.rs  jni.rs  util.rs
src/mem/: align.rs
