[workspace]
default-members = [".", "lib/*"]
members = [".", "lib/*"]

[workspace.dependencies]
osi-derive = { path = "./lib/osi-derive" }
osi-derive-proc = { path = "./lib/osi-derive-proc" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0" }

[package]
name = "osi"
version = "0.1.0"

categories = [
        "no-std",
        "os",
]
description = "Operating System Interfaces"
edition = "2021"
homepage = "https://www.osiris.foo"
keywords = [
        "api",
        "direct",
        "ffi",
        "os",
        "syscall",
]
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/osiris-apis/osi"
rust-version = "1.70"

[dependencies]
osi-derive = { workspace = true }
