[workspace]
default-members = [".", "lib/*"]
members = [".", "lib/*"]

[workspace.dependencies]
osi-derive = { path = "./lib/osi-derive" }
osi-derive-proc = { path = "./lib/osi-derive-proc" }
osi-lib = { path = "./lib/osi-lib" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0" }

[workspace.package]
categories = [
        "no-std",
        "os",
]
edition = "2021"
homepage = "https://www.osiris.foo"
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/osiris-apis/osi"
rust-version = "1.74"

[package]
name = "osi"
version = "0.1.0"

description = "Operating System Interfaces"
keywords = [
        "api",
        "direct",
        "ffi",
        "os",
        "syscall",
]

categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
osi-derive = { workspace = true }
