[package]
name = "cargo-osiris"
version = "0.1.0"

categories = [
        "command-line-utilities",
        "development-tools",
        "os",
]
description = "Osiris Build System"
keywords = [
        "app",
        "build",
        "osiris",
        "platform",
        "tooling",
]

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.3.0", features = ["cargo"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = { version = "1.0.0", features = ["arbitrary_precision", "float_roundtrip"] }
toml = { version = "0.7.0" }
