[package]
name = "cargo-osiris"
version = "0.0.1"

categories = [
        "command-line-utilities",
        "development-tools",
        "os",
]
description = "Osiris Build System"
keywords = [
        "app",
        "build",
        "osiris",
        "platform",
        "tooling",
]

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
osi-lib = { features = ["std"], workspace = true }
serde_json = { version = "1.0.0", features = ["arbitrary_precision", "float_roundtrip"] }
