[package]
name = "osi-apis"
version = "0.0.1"

description = "Osiris Cross-Platform APIs"
keywords = [
        "api",
        "cross",
        "os",
        "osiris",
        "platform",
]

categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
osiris-linux = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
osiris-windows = { workspace = true }
