[package]
name = "osi-demo"
version = "0.0.1"

categories = [
        "development-tools",
]
description = "Osiris Demo Application"
keywords = [
        "demo",
        "direct",
        "os",
        "osiris",
        "raw",
]

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata]
android.java.source-dirs = ["src/platform/android/java"]
android.kotlin.source-dirs = ["src/platform/android/java"]
android.manifest-file = "src/platform/android/AndroidManifest.xml"
android.resource-dirs = ["src/platform/android/res"]

[target.'cfg(target_os = "linux")'.dependencies]
adw = { features = ["v1_1"], package = "libadwaita", version = "0.5" }
gtk = { features = ["v4_6"], package = "gtk4", version = "0.7" }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
