[package]
name = "osi-derive-proc"
version = "0.1.0"

categories = [
        "development-tools",
        "no-std",
        "rust-patterns",
]
description = "Direct Derive Proc Macro"
keywords = [
        "bounds",
        "derive",
        "direct",
        "macro",
        "traits",
]

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = ["full"], workspace = true }
