[package]
name = "osi-derive"
version = "0.1.0"

categories = [
        "development-tools",
        "no-std",
        "rust-patterns",
]
description = "Direct Derive"
keywords = [
        "bounds",
        "derive",
        "direct",
        "macro",
        "traits",
]

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
osi-derive-proc = { workspace = true }
