[package]
name = "osi-lib"
version = "0.0.1"

description = "Osiris Shared Library"
keywords = [
        "api",
        "library",
        "osiris",
        "shared",
        "utilities",
]

categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
osi-derive = { workspace = true }

[features]
std = []
