[package]
name = "osiris-analyzer"
version = "0.0.1"

categories = [
        "development-tools",
]
description = "Osiris Apis Analyzer"
keywords = [
        "analyzer",
        "direct",
        "os",
        "osiris",
        "raw",
]

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata]
android.java.source-dirs = ["src/platform/android/java"]
android.kotlin.source-dirs = ["src/platform/android/java"]
android.manifest-file = "src/platform/android/AndroidManifest.xml"
android.resource-dirs = ["src/platform/android/res"]

[target.'cfg(target_os = "linux")'.dependencies]
adw = { features = ["v1_1"], workspace = true }
gtk = { features = ["v4_6"], workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies.icrate]
workspace = true
features = [
        "AppKit",
        "AppKit_NSApplication",
        "AppKit_NSColor",
        "AppKit_NSMenu",
        "AppKit_NSMenuItem",
        "AppKit_NSStackView",
        "AppKit_NSTextField",
        "AppKit_NSTextView",
        "AppKit_NSWindow",
        "CoreData",
        "Foundation",
        "Foundation_NSNotification",
        "Foundation_NSString",
        "Foundation_NSThread",
]

[target.'cfg(target_os = "windows")'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
