[package]
name = "osiris-analyzer"
version = "0.0.1"

categories = [
        "development-tools",
]
description = "Osiris Apis Analyzer"
keywords = [
        "analyzer",
        "direct",
        "os",
        "osiris",
        "raw",
]

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata]
android.java.source-dirs = ["src/platform/android/java"]
android.kotlin.source-dirs = ["src/platform/android/java"]
android.manifest-file = "src/platform/android/AndroidManifest.xml"
android.resource-dirs = ["src/platform/android/res"]

osiris.version = 1
osiris.application.id = "OsirisAnalyzer"
osiris.application.name = "Osiris Apis Analyzer"

[[package.metadata.osiris.platforms]]
id = "macos"
macos.bundle-id = "foo.osiris.analyzer"
macos.category = "public.app-category.developer-tools"
macos.version-code = 1
macos.version-name = "0.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
adw = { features = ["v1_1"], workspace = true }
gtk = { features = ["v4_6"], workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies.icrate]
workspace = true
features = [
        "AppKit",
        "AppKit_NSApplication",
        "AppKit_NSColor",
        "AppKit_NSMenu",
        "AppKit_NSMenuItem",
        "AppKit_NSStackView",
        "AppKit_NSTextField",
        "AppKit_NSTextView",
        "AppKit_NSWindow",
        "CoreData",
        "Foundation",
        "Foundation_NSNotification",
        "Foundation_NSString",
        "Foundation_NSThread",
]

[target.'cfg(target_os = "windows")'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]

[[package.metadata.osiris.application.icons]]
path = "res/icons/osiris-eye.16.png"
size = 16
[[package.metadata.osiris.application.icons]]
path = "res/icons/osiris-eye.32.png"
size = 32
[[package.metadata.osiris.application.icons]]
path = "res/icons/osiris-eye.64.png"
size = 64
[[package.metadata.osiris.application.icons]]
path = "res/icons/osiris-eye.128.png"
size = 128
[[package.metadata.osiris.application.icons]]
path = "res/icons/osiris-eye.256.png"
size = 256
[[package.metadata.osiris.application.icons]]
path = "res/icons/osiris-eye.512.png"
size = 512
[[package.metadata.osiris.application.icons]]
path = "res/icons/osiris-eye.1024.png"
size = 1024
